--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>About page</title>
 </head>
 <body>
-    <h1>Contact me bro</h1>
+    <h1>This is an about page</h1>
     <ul>
         <li><a href="/">Home Page</a></li>
         <li><a href="/about">About</a></li>
